2010-07-01  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/axis.h src/command.c src/datafile.c src/gp_time.h
	src/internal.c src/time.c:

	Track time coordinates to sub-second precision.
	
	Time data read using the %S format specifier in "set timefmt" is now
	treated as a floating point number rather than an integer. This affects
	data read from an input file ("set xdata time"), the axis range and tic
	locations given for an axis using time coordinates ("set xrange",
	"set xtics"), and time conversions performed via calls to strptime().

	Time data output formats ("set format" strftime()) now accept a 
	precision modifier to the %S format. For example, "%H:%M:%.3S" will
	print hour, minute, seconds to a precision of milliseconds.
	gnuplot> print strftime("%Y %D %H:%M:%.3S", 12345.6789)
	         2000 01/01/00 03:25:45.679

	The maximum precision allowed for output is 6 digits (microseconds).
	6 digit accuracy is possible for absolute dates through the year 2550.


2010-06-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): Add back the rather useless code that handles
	four columns of data for styles LINESPOINTS and POINTSTYLE, even though
	the variable color handling no longer needs it.  It is still called
	(foolishly) if the plot command is issued with no using spec at all.

2010-06-29  Peter Juhasz

	* docs/gnuplot.doc: Document variable color for plot styles that were
	not previously supported.

	* src/plot2d.c: The final piece of "with labels tc variable"

2010-06-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (parse_label_options) src/plot2d.c (store_label)
	src/pm3d.c (set_plot_with_palette):
	Finish variable color support for text color in LABELPOINTS.

2010-06-28  Peter Juhasz

	* src/graphics.c demo/varcolor.dem: Finish variable color support
	for plot style CANDLESTICKS.  Expand the demo.

2010-06-28  Ethan A Merritt  <merritt@u.washington.edu>
